<resources>
    <string name="app_name" translatable="false">VocableTrainer Beta</string>
    <string name="Trainer_hint_solution">Answer</string>
    <string name="Trainer_btn_Show_Next">Show Next</string>
    <string name="Trainer_btn_Show_Next_Auto">Show Next (in %d)</string>
    <string name="Trainer_Quick_btn_Correct">Correct</string>
    <string name="Trainer_Quick_btn_Wrong">Wrong</string>
    <string name="Trainer_Quick_btn_Resolve">Resolve</string>
    <string name="Trainer_Quick_Asked">Asked</string>
    <string name="Main_btn_About">About</string>
    <string name="Main_btn_Delete_List">Delete List</string>
    <string name="Main_btn_Edit_List">Edit List</string>
    <string name="Main_btn_New_List">Create List</string>
    <string name="Main_btn_New_Session">Start new Session</string>
    <string name="Main_btn_Resume_Session">Resume Session</string>
    <string name="Main_btn_Import">Import</string>
    <string name="Main_btn_Export">Export</string>
    <string name="Main_btn_Statistics">Training Stats</string>
    <string name="Trainer_Menu_Mode">Mode</string>
    <string name="Trainer_Mode_Classic">Classic Mode</string>
    <string name="Trainer_Mode_Classic_MM">Classic Multimeaning Mode</string>
    <string name="Trainer_Mode_Quick">Quick Mode</string>
    <string name="Trainer_Title">Training</string>
    <string name="Trainer_btn_Hint">Show Hint</string>
    <string name="Trainer_btn_Solution">Show Solution</string>
    <string name="Trainer_Input_Invalid">Wrong input</string>
    <string name="Trainer_Input_Double">Duplicate input</string>
    <string name="Trainer_Input_Correct">Correct</string>
    <string name="TSettings_chkbx_AdditionAuto">Auto mode for additions</string>
    <string name="TSettings_Time_Solve">Times to solve</string>
    <string name="TSettings_chkbx_Tips">Allow Hints</string>
    <string name="TSettings_btn_Start">Start Session</string>
    <string name="TSettings_rb_A">Ask column A</string>
    <string name="TSettings_rb_B">Ask column B</string>
    <string name="TSettings_rb_Random">Ask random column</string>
    <string name="TSettings_chkbx_CaseSensitive">check case sensitive</string>
    <string name="TSettings_chkbx_TrimSpaces">Ignore surrounding spaces</string>
    <string name="TSettings_Tab_Settings">Settings</string>
    <string name="TSettings_Tab_List">Lists</string>
    <string name="TSettings_Info_missing_lists">You have to select at least one list.</string>
    <string name="TSettings_Missing_Times_solve">Missing times to solve</string>
    <string name="Lists_Title">Lists</string>
    <string name="List_Select_Title">Select List</string>
    <string name="List_Create_Description">Create List</string>
    <string name="List_Deleted_Message">List deleted</string>
    <string name="List_Delete_Icon_Description">DELETE</string>
    <string name="Sort_Col_Name">Name</string>
    <string name="Sort_Col_A">Column A</string>
    <string name="Sort_Col_B">Column B</string>
    <string name="Sort_Col_Tip">Column Tip</string>
    <string name="Editor_Meaning_Btn_Desc_Add">Add Meaning</string>
    <string name="Editor_Meaning_Btn_Desc_Remove">Remove Meaning</string>
    <string name="Editor_Hint_Column_A">Column A</string>
    <string name="Editor_Hint_Column_B">Column B</string>
    <string name="Editor_Hint_List_Name">List Name</string>
    <string name="Editor_Hint_Tip">Hint</string>
    <string name="Editor_Hint_Addition">Additional</string>
    <string name="Editor_ListSettings">List Settings</string>
    <string name="Editor_Entry_Deleted_Message">Entry deleted</string>
    <string name="CSV_Format">CSV Format</string>
    <string name="Select_File_btn">Select File</string>
    <string name="Import_Title">Import Lists</string>
    <string name="Import_Tab_Main">Settings</string>
    <string name="Import_Tab_Preview">Preview</string>
    <string name="Import_OK">Import</string>
    <string name="Import_file_placeholder">Import File</string>
    <string name="Import_preview_text">Preview</string>
    <string name="Import_list_hint">List to use</string>
    <string name="Import_btn_List_Select">Select List</string>
    <string name="Import_btn_Reparse">Reparse</string>
    <string name="Import_Info_multilist">Detected Multi-List format</string>
    <string name="Import_Info_singlelist">Detected single list</string>
    <string name="Import_Info_rawlist">Detected raw list</string>
    <string name="Import_File_select_Info">Select import source file</string>
    <string name="Import_Preview_Update_Title">Updating..</string>
    <string name="Import_Importing_Title">Importing..</string>
    <string name="Import_Finished_Title">Importing finished</string>
    <string name="Import_Preview_Log_Title">Preview log</string>
    <string name="Import_Preview_Loading">Loading data..</string>
    <string name="Import_Preview_No_data">No data to display..</string>
    <string name="Import_Cancel_Toast_Preview">Please reparse to continue</string>
    <string name="Import_Cancel_Log">Import cancelled</string>
    <string name="Export_Title">Export Lists</string>
    <string name="Export_Tab_Main">Settings</string>
    <string name="Export_Tab_List">List Selection</string>
    <string name="ExImport_Tab_CustomFormat">Custom Format</string>
    <string name="Export_Cancel_Toast">Export cancelled</string>
    <string name="Export_OK">Export</string>
    <string name="Export_file_placeholder">Export File</string>
    <string name="Export_chk_Table_Meta">Export List Meta</string>
    <string name="Export_chk_Multilist">Export Multiple Lists</string>
    <string name="Export_File_select_Info">Select export target file</string>
    <string name="Export_Exporting_Title">Exporting..</string>
    <string name="Export_Error_Format_Multivalue_Title">Invalid CSV Format</string>
    <string name="Export_Error_Format_Multivalue_Text">Export requires a CSV Format with multi-value support to avoid data loss.</string>
    <string name="Export_Error_Info_Title">Export Error:</string>
    <string name="File_btn_Cancel">Cancel</string>
    <string name="File_Loading">Loading..</string>
    <string name="File_t_hint">File_Name.xyz</string>
    <string name="File_Menu_Sort_Name">name</string>
    <string name="File_Menu_Sort_Size">size</string>
    <string name="File_Menu_Up_Desc">Go up</string>
    <string name="Perm_Retry">Retry</string>
    <string name="GEN_Sort">Sorting</string>
    <string name="GEN_OK">OK</string>
    <string name="GEN_Cancel">Cancel</string>
    <string name="GEN_Undo">UNDO</string>
    <string name="GEN_Select_all">Select all</string>
    <string name="Trainer_Diag_finished_Title">Finished</string>
    <string name="Trainer_Diag_finished_MSG">You\'ve finished this training session.</string>
    <string name="Editor_Diag_delete_Title">Delete Entry</string>
    <string name="Editor_Diag_delete_MSG_part" formatted="false">Do you want to delete this entry ?</string>
    <string name="Editor_Diag_delete_btn_OK">Delete</string>
    <string name="Editor_Diag_delete_btn_CANCEL">Cancel</string>
    <string name="Editor_Diag_edit_Title">Edit Entry</string>
    <string name="Editor_Diag_edit_btn_CANCEL">Cancel</string>
    <string name="Editor_Diag_table_Title_New">New List</string>
    <string name="Editor_Diag_table_Title_Edit">Edit List</string>
    <string name="Editor_Diag_table_btn_Canel">Cancel</string>
    <string name="Format_Diag_error_Title">Invalid Input</string>
    <string name="Survey_Diag_Title">Android Version Survey</string>
    <string name="Survey_Diag_Msg"><html>I\'d like to do a survey about the Android versions on which VAT is running.\nIf you take part the following Information will be send to <a href="https://stats.vocabletrainer.de">https://stats.vocabletrainer.de</a> and stored:\n<ul><li>Your Android version</li></ul>\nNothing else will be send, no IP is stored.\nYou can also see the results at above URL.</html></string>
    <string name="Survey_Diag_Accept">Accept Survey</string>
    <string name="Survey_Diag_Decline">Decline</string>
    <string name="Survey_Diag_Error_Toast">Error during survey submit!</string>
    <string name="Survey_Diag_Success_Toast">Thanks for taking part!</string>
    <string name="About_Title">About</string>
    <string name="About_Msg" formatted="false">About: VocableTrainer %v\nCopyright 2017 Aron Heinecke\nLicensed under &lt;a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache License 2.0&lt;/a>\n\n&lt;a href="https://github.com/0xpr03/VocableTrainer-Android/wiki">Documentation&lt;/a>\n\n&lt;a href="https://github.com/0xpr03/VocableTrainer-Android/issues">Bug Reports &amp; Feature requests&lt;/a>\n\n&lt;a href="https://github.com/0xpr03/VocableTrainer-Android/releases">Changelog&lt;/a>\n\nUsing &lt;a href="https://commons.apache.org/csv/">Apache Commons CSV&lt;/a></string>
    <string name="About_btn_Close">Close</string>
    <string name="File_Diag_exists_Title">File exists</string>
    <string name="File_Diag_MSG_part" formatted="false">Do you really want to overwrite the file %f ?</string>
    <string name="File_Diag_btn_OK">Overwrite</string>
    <string name="File_Diag_btn_CANCEL">Cancel</string>
    <string name="Character_Incorrect_Amount">Incorrect character amount!</string>
    <string name="Perm_CSV">Permission is required to load/write your CSV files for import/export.</string>
    <string name="File_Error_Mediastate">No storage found / is writable! Unable to continue.</string>
    <string name="File_Error_NoWrite_Perm">No writing permissions: </string>
    <string name="File_Error_No_Media_For_File">No Media found: </string>
    <string name="File_Error_Nullpointer">Unable to show files. Nullpointer: </string>
    <string name="File_Error_IsDir">File is already a directory</string>
    <string name="File_Error_Permission">No permission to access: </string>
    <string name="Import_Message" formatted="true">Import a UTF8 encoded CSV file containing (multiple) vocable lists.\nSee the <a href="https://github.com/0xpr03/VocableTrainer-Android/wiki/Import">wiki page</a> for help.</string>
    <string name="Export_Message" formatted="true">Export to UTF8 encoded CSV file (with list info)\nSee the <a href="https://github.com/0xpr03/VocableTrainer-Android/wiki/Export">wiki page</a> for help.</string>
    <string name="Export_Info_Finished">Export finished</string>
    <string name="Format_Error_Input_equals">The values of the following options should not be equal: $A : $B</string>
    <string name="Import_Error_MIN_RECORD_SIZE">Invalid entry, not enough values:</string>
    <string name="Import_Warn_MAX_RECORD_SIZE">Entry has too many values:</string>
    <string name="Import_Info_Import">Imported %d vocables</string>
    <string name="Character_Tab">Tab (\\t)</string>
    <string name="Character_Comma">Comma (,)</string>
    <string name="Character_Backslash">Backslash (\\)</string>
    <string name="Character_Line_Feed">Line Feed (\\r)</string>
    <string name="Character_Semicolon">Semicolon (;)</string>
    <string name="Character_Quotations_Mark">Quotation Mark (\")</string>
    <string name="Character_Custom">Custom Character</string>
    <string name="Import_Multilist_REPLACE">Replace existing lists</string>
    <string name="Import_Multilist_IGNORE">Ignore existing lists</string>
    <string name="Import_Multilist_ADD">Append if list exists</string>
    <string name="Import_Singlelist_REPLACE">Replace list when existing</string>
    <string name="Import_Singlelist_ADD">Append to list when existing</string>
    <string name="Import_Singlelist_CREATE">Create new list</string>
    <string name="Import_Rawlist_CREATE">Create new list</string>
    <string name="Import_Rawlist_MERGE">Add to list</string>
    <string name="CSV_Format_EXCEL">Excel</string>
    <string name="CSV_Format_RFC4180" translatable="false">RFC 4180</string>
    <string name="Placeholder" translatable="false"><![CDATA[<Placeholder>]]></string>
</resources>