<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:support="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tMenu_Tip"
        android:icon="@drawable/ic_help_white_48dp"
        android:title="@string/Trainer_btn_Hint"
        support:showAsAction="always"/>
    <item
        android:id="@+id/tMenu_Classic"
        android:title="@string/Trainer_Mode_Classic"
        support:showAsAction="never"
        />
    <item
        android:id="@+id/tMenu_ClassicMM"
        android:title="@string/Trainer_Mode_Classic_MM"
        support:showAsAction="never"
        />
    <item
        android:id="@+id/tMenu_Quick"
        android:title="@string/Trainer_Mode_Quick"
        support:showAsAction="never"
        />
</menu>