<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:support="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fMenu_Up"
        android:icon="@drawable/ic_arrow_upward_24dp"
        android:title="@string/Placeholder"
        support:showAsAction="ifRoom" />

    <item
        android:id="@+id/fMenu_sort"
        android:icon="@drawable/ic_sort_white_48dp"
        android:title="@string/GEN_Sort"
        support:showAsAction="always">

        <menu>
            <item
                android:id="@+id/fMenu_sort_name"
                android:title="@string/File_Menu_Sort_Name" />
            <item
                android:id="@+id/fMenu_sort_size"
                android:title="@string/File_Menu_Sort_Size" />
        </menu>

    </item>
</menu>